extends Node2D

# ğŸ’¡ ä¿®æ­£: ã‚·ãƒ¼ãƒ³ã®preloadã¯å…¨ã¦ 'const' ã§å¤§æ–‡å­—è¡¨è¨˜ã«çµ±ä¸€ã—ã¾ã™
const MDI_WINDOW_SCENE = preload("res://scenes/windows/mdi_window.tscn")
const TERMINAL_SCENE = preload("res://scenes/windows/terminal_ui.tscn")
const NETWORKMAP_SCENE = preload("res://scenes/windows/NetworkMapUI.tscn")
const SIDEBAR_SCENE = preload("res://scenes/ui/Sidebar.tscn")
const MISSION_SELECT_SCENE = preload("res://scenes/ui/MissionSelectUI.tscn")
const MAIN_MENU_SCENE = preload("res://scenes/ui/MainMenu.tscn")

# é–‹ã„ã¦ã„ã‚‹ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’ç®¡ç†ã™ã‚‹è¾æ›¸ï¼ˆé‡è¤‡é˜²æ­¢ç”¨ï¼‰
var open_windows: Dictionary = {}

# ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³ã‚’åˆ¶å¾¡ã™ã‚‹ãƒãƒ¼ãƒ‰ (SidebarContainerã®å­ã¨ã—ã¦è¿½åŠ ã™ã‚‹ã®ãŒãƒ™ã‚¹ãƒˆ)
@onready var ui_layer: CanvasLayer = $UI_Layer
@onready var ui_holder: Control = $UI_Layer/UI_Holder
@onready var sidebar_toggle: TextureButton = $UI_Layer/SidebarToggle
@onready var btn_back_mission_select: Button = $UI_Layer/btnBackMissionSelect
@onready var btn_start_mission: Button = $HBoxContainer/DetailsPanel/VBoxContainer/btnStartMission

var sidebar_instance: Control = null # <--- Sidebarã‚¤ãƒ³ã‚¹ã‚¿ãƒ³ã‚¹ã‚’ä¿æŒã™ã‚‹å¤‰æ•°
var current_ui_instance: Control = null

# ã‚µã‚¤ãƒ‰ãƒãƒ¼ã®å¹…ã¨ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³æ™‚é–“ã‚’ã“ã“ã§å®šæ•°ã¨ã—ã¦å®šç¾©ã—ã€sidebar.gdã¨åŒæœŸã•ã›ã‚‹
const SIDEBAR_WIDTH = Global.SIDEBAR_WIDTH
const TWEEN_DURATION = Global.TWEEN_DURATION

var sidebar_expanded: bool = false
const COLLAPSED_WIDTH = 20.0
const EXPANDED_WIDTH = 150.0 # å±•é–‹å¾Œã®å¹…

func _ready():
	# 1.Sidebarã‚¤ãƒ³ã‚¹ã‚¿ãƒ³ã‚¹ã‚’ä½œæˆã—ã€UI_Layerã®å­ã¨ã—ã¦è¿½åŠ 
	var sidebar_ui = SIDEBAR_SCENE.instantiate() # ğŸ’¡ ä¿®æ­£: SIDEBAR_SCENEã‚’ä½¿ç”¨
	if is_instance_valid(ui_layer):
		$UI_Layer.add_child(sidebar_ui)
	else:
		print("FATAL ERROR: UI_Layer is null! Cannot add Sidebar.")
	
	if is_instance_valid(sidebar_toggle):
		sidebar_toggle.visible = false # ğŸ‘ˆ ã‚¨ãƒ©ãƒ¼å›é¿
	else:
		print("FATAL ERROR: sidebar_toggle is null! Check the path $UI_Layer/SidebarToggle.")
	sidebar_instance = sidebar_ui
	sidebar_instance.visible = false # åˆæœŸçŠ¶æ…‹ã¯éè¡¨ç¤ºã¨ã™ã‚‹
	
	if is_instance_valid(btn_back_mission_select):
		btn_back_mission_select.visible = false
	else:
		print("FATAL ERROR: btn_back_mission_select is null! Check the path $UI_Layer/btnBackMissionSelect.")


	# 2.ã‚¢ãƒ—ãƒªèµ·å‹•ã¨ãã¯Mission Select/Main Menuã®ã„ãšã‚Œã‹ã‹ã‚‰é–‹å§‹
	#navigate_to_mission_select()
	start_main_menu_mode()

# ----------
# ãƒ˜ãƒ«ãƒ‘ãƒ¼ãƒ¡ã‚½ãƒƒãƒ‰ï¼ˆUIåˆ‡ã‚Šæ›¿ãˆã®æ ¸ã¨ã™ã‚‹ãƒ­ã‚¸ãƒƒã‚¯ï¼‰
# ----------
func get_root_scene():
	# ğŸ’¡ ç¢ºå®Ÿã«RootSceneã‚’å–å¾—ã™ã‚‹ãŸã‚ã®ãƒ˜ãƒ«ãƒ‘ãƒ¼
	return get_node("/root/RootScene")

# ğŸ’¡ è¿½åŠ : æ—¢å­˜ã®UIã¨ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’å…¨ã¦ã‚¯ãƒªãƒ¼ãƒ³ã‚¢ãƒƒãƒ—ã™ã‚‹é–¢æ•°
func _clear_ui_and_windows():
	# å¤ã„å…¨ç”»é¢UIã‚’å‰Šé™¤
	if is_instance_valid(current_ui_instance):
		current_ui_instance.queue_free()
		current_ui_instance = null
		
	# é–‹ã„ã¦ã„ã‚‹MDIã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’å…¨ã¦å‰Šé™¤
	for id in open_windows.keys():
		if is_instance_valid(open_windows[id]):
			open_windows[id].queue_free()
	open_windows.clear()
	
func _set_current_ui(new_ui: Control):
	# 1.å¤ã„UIã‚’å‰Šé™¤
	if is_instance_valid(current_ui_instance):
		current_ui_instance.queue_free()
		
	# 2.æ–°ã—ã„UIã‚’UI_Holderã«è¿½åŠ 
	if is_instance_valid(ui_holder):
		ui_holder.add_child(new_ui)
	else:
		print("FATAL ERROR: UI_Holder is null! Cannot add UI_Holder.")
	current_ui_instance = new_ui
	# Full Rectãƒ—ãƒªã‚»ãƒƒãƒˆã§è¦ª(UI_Holder)å…¨ä½“ã«åºƒã’ã‚‹
	new_ui.set_anchors_preset(Control.PRESET_FULL_RECT)
	
# ãƒŸãƒƒã‚·ãƒ§ãƒ³é¸æŠç”»é¢ã¸ç§»è¡Œ(MainMenuUIã‹ã‚‰å‘¼ã³å‡ºã•ã‚Œã‚‹ï¼‰
func navigate_to_mission_select():
	# ğŸ’¡ ä¿®æ­£: _clear_ui_and_windowsã‚’å‘¼ã³å‡ºã—ã€ã‚¯ãƒªãƒ¼ãƒ³ã‚¢ãƒƒãƒ—ã‚’ä»»ã›ã‚‹
	_clear_ui_and_windows()
	
	# UI_Holderã«MissionSelectUIã‚’ãƒ­ãƒ¼ãƒ‰
	var mission_select_instance = MISSION_SELECT_SCENE.instantiate() # ğŸ’¡ ä¿®æ­£: å®šæ•° MISSION_SELECT_SCENEã‚’ä½¿ç”¨
	_set_current_ui(mission_select_instance) # ğŸ’¡ ä¿®æ­£: ã‚¿ã‚¤ãƒ mission_select_instalce ã‚’ä¿®æ­£
	
	if is_instance_valid(sidebar_toggle):
		sidebar_toggle.visible = false
	if is_instance_valid(sidebar_instance):
		sidebar_instance.visible = false # Sidebarã‚‚éè¡¨ç¤ºã¨ã™ã‚‹
	if is_instance_valid(btn_back_mission_select):
		btn_back_mission_select.visible = false

# ğŸ’¡ ãƒ¡ã‚¤ãƒ³ãƒ¡ãƒ‹ãƒ¥ãƒ¼ç”»é¢ã¸ç§»è¡Œ (ã‚¢ãƒ—ãƒªèµ·å‹•æ™‚ã‚„ã€MissionSelectUIã®ã€Œæˆ»ã‚‹ã€ãƒœã‚¿ãƒ³ã‹ã‚‰å‘¼ã³å‡ºã•ã‚Œã‚‹)
func start_main_menu_mode():
	# UIã¨MDIã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’å…¨ã¦ã‚¯ãƒªã‚¢
	_clear_ui_and_windows()
	
	# UI_Holderã«MainMenuUIã‚’ãƒ­ãƒ¼ãƒ‰
	var main_menu_instance = MAIN_MENU_SCENE.instantiate()
	_set_current_ui(main_menu_instance)
	
	# Sidebarã¨ãƒˆã‚°ãƒ«ãƒœã‚¿ãƒ³ã¯éè¡¨ç¤º
	if is_instance_valid(sidebar_toggle):
		sidebar_toggle.visible = false
	if is_instance_valid(sidebar_instance):
		sidebar_instance.visible = false
	if is_instance_valid(btn_back_mission_select):
		btn_back_mission_select.visible = false

# ãƒŸãƒƒã‚·ãƒ§ãƒ³é–‹å§‹é–¢æ•°
func start_mission(mission_id: String):
	# ğŸ’¡ ä¿®æ­£: ç”»é¢é·ç§»ã¨ã—ã¦ã€ã¾ãšç¾åœ¨ã®UIï¼ˆMissionSelectUIï¼‰ã¨ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’ã‚¯ãƒªã‚¢
	_clear_ui_and_windows()
	
	# 1. MissionManagerã‹ã‚‰ãƒŸãƒƒã‚·ãƒ§ãƒ³ãƒ‡ãƒ¼ã‚¿ã‚’å–å¾—
	# MissionManager.get_mission_data() ã¯MissionManager.gdã«å®Ÿè£…ã•ã‚Œã¦ã„ã‚‹ã‚‚ã®ã¨ä»®å®š
	var mission_data = MissionManager.get_mission_data(mission_id) 
	
	if mission_data.is_empty():
		print("Error: Failed to load data for mission: ", mission_id)
		return

	# 2. MDIã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã¯ _clear_ui_and_windows() ã§æ—¢ã«é–‰ã˜ã‚‰ã‚Œã¦ã„ã‚‹ãŸã‚ä¸è¦ (open_windows.clear() ã‚‚ä¸è¦)
	
	# 3. å¿…è¦ãªåˆæœŸã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’é–‹ã (ä¾‹: Terminalã¯å¿…é ˆ)
	open_window("Terminal", TERMINAL_SCENE) # ğŸ’¡ ä¿®æ­£: TERMINAL_SCENEã‚’ä½¿ç”¨
	
	# 4. ã‚µã‚¤ãƒ‰ãƒãƒ¼ã¨ãƒˆã‚°ãƒ«ãƒœã‚¿ãƒ³ã‚’è¡¨ç¤ºã™ã‚‹
	sidebar_toggle.visible = true # ãƒˆã‚°ãƒ«ãƒœã‚¿ãƒ³ã‚’è¡¨ç¤º
	if is_instance_valid(sidebar_instance):
		sidebar_instance.visible = true # ã‚µã‚¤ãƒ‰ãƒãƒ¼ã‚’æœ‰åŠ¹åŒ–
	btn_back_mission_select.visible = true
		
	# 5. UIã«ãƒŸãƒƒã‚·ãƒ§ãƒ³ã‚¿ã‚¤ãƒˆãƒ«ã‚„ç›®æ¨™ã‚’è¡¨ç¤ºã™ã‚‹å‡¦ç†ï¼ˆä»Šå¾Œã®å®Ÿè£…ï¼‰
	print("Mission Started: ", mission_data.get("title"))

# ğŸ’¡ ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’é–‹ãæ±ç”¨é–¢æ•°
func open_window(window_id: String, content_scene: PackedScene, initial_position: Vector2 = Vector2(50, 50)):
	if open_windows.has(window_id) and is_instance_valid(open_windows[window_id]):
		# ã™ã§ã«é–‹ã„ã¦ã„ã‚‹å ´åˆã¯æœ€å‰é¢ã«ç§»å‹•ã—ã¦çµ‚äº†
		open_windows[window_id].grab_focus()
		return
	
	var mdi_window = MDI_WINDOW_SCENE.instantiate() # ğŸ’¡ ä¿®æ­£: MDI_WINDOW_SCENEã‚’ä½¿ç”¨
	#self.add_child(mdi_window) # RootSceneã®å­ã¨ã—ã¦è¿½åŠ 
	# UI_Layerã®å­ä¾›ã¨ã—ã¦è¿½åŠ ã™ã‚‹
	if is_instance_valid(ui_layer):
		$UI_Layer.add_child(mdi_window)
	else:
		print("ERROR: UI_layer is null! Cannot open window.")
		mdi_window.queue_free()
		return
	
	# ... (ä»¥é™ã® open_window é–¢æ•°ã¯å¤‰æ›´ãªã—)

	mdi_window.position = initial_position
	
	# åˆæœŸåŒ–
	mdi_window.initialize(window_id, content_scene)
	open_windows[window_id] = mdi_window
	
	# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãŒé–‰ã˜ã‚‰ã‚ŒãŸæ™‚ã®å‡¦ç†ã‚’è¨­å®š
	mdi_window.close_requested.connect(Callable(self, "_on_window_closed").bind(window_id))

	# ã‚¿ãƒ¼ãƒŸãƒŠãƒ«ãŒèµ·å‹•ã—ãŸå ´åˆã¯ãƒ•ã‚©ãƒ¼ã‚«ã‚¹ã‚’è¨­å®š
	if window_id == "Terminal" and mdi_window.has_node("ContentContainer/TerminalUI"):
		var term = mdi_window.get_node("ContentContainer/TerminalUI")
		if term.has_node("InputLine"):
			term.get_node("InputLine").grab_focus()

	# ãƒãƒƒãƒ—ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãŒé–‹ã‹ã‚ŒãŸã‚‰ãƒ­ãƒ¼ãƒ‰å‡¦ç†ã‚’å‘¼ã³å‡ºã™
	if window_id == "Network Map":
		# MDIWindow -> ContentContainer -> NetworkMapUI -> NetworkMap ã¸ã®ãƒ‘ã‚¹ã‚’è¾¿ã‚‹
		var network_map_ui = mdi_window.get_node("ContentContainer").get_child(0) # ContentContainerã®å­ã¯ NetworkMapUI ã®ã¯ãš
		var network_manager = network_map_ui.find_child("NetworkMap")
		
		if is_instance_valid(network_manager):
			# ğŸš¨ ãƒ†ã‚¹ãƒˆã®ãŸã‚ã€ãƒ‘ã‚¹ã‚’ 'res://' ã«å¤‰æ›´ã™ã‚‹ã“ã¨ã‚’æ¨å¥¨ã—ã¾ã™
			network_manager.load_mission("res://missions/mission_01.json")

func _on_window_closed(window_id):
	# ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãŒé–‰ã˜ã‚‰ã‚ŒãŸã‚‰ç®¡ç†ãƒªã‚¹ãƒˆã‹ã‚‰å‰Šé™¤
	open_windows.erase(window_id)

# ğŸ’¡ ã‚µã‚¤ãƒ‰ãƒãƒ¼ã®é–‹é–‰å‡¦ç†ã¯å¤§ããªå¤‰æ›´ãªã—
func _on_sidebar_toggle_pressed() -> void:
	if not is_instance_valid(sidebar_instance):
		return

	# 1. sidebar_instanceã®é–‹é–‰ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³ã‚’é–‹å§‹ã—ã€æ–°ã—ã„çŠ¶æ…‹ï¼ˆis_open_nowï¼‰ã‚’å–å¾—
	var is_open_now = sidebar_instance.toggle_sidebar()
	
	# 2. ãƒˆã‚°ãƒ«ãƒœã‚¿ãƒ³ã‚’ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³ã•ã›ã‚‹ãŸã‚ã®Tweenã‚’ä½œæˆ
	var tween = create_tween()
	
	# 3. ç›®æ¨™ä½ç½®ã‚’è¨ˆç®—
	# é–‰ã˜ã‚‹æ™‚ï¼ˆfalseï¼‰: X=0 (ç”»é¢ç«¯)
	# é–‹ãæ™‚ï¼ˆtrueï¼‰: X=SIDEBAR_WIDTH (100.0)
	var target_x = SIDEBAR_WIDTH if is_open_now else 0.0
	
	# 4. sidebar_toggleãƒãƒ¼ãƒ‰ã®Xåº§æ¨™ã‚’ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³
	tween.tween_property(sidebar_toggle, "position", Vector2(target_x, sidebar_toggle.position.y), TWEEN_DURATION)\
		.set_trans(Tween.TRANS_QUAD)\
		.set_ease(Tween.EASE_OUT)


func _on_btn_back_mission_select_pressed() -> void:
	print("Back button pressed: Transitioning to MissionSelectUI")
	
	navigate_to_mission_select()
